--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="form-container sign-in">
 				<form>
 					<h1>Sign In</h1>
-					<input type="email" placeholder="Email" />
+					<input type="text" placeholder="Email / Phone" />
 					<input type="password" placeholder="Password" />
 					<a href="#">Forget Your Password?</a>
 					<button>Sign In</button>
@@ -35,22 +35,24 @@
 			<div class="toggle-container">
 				<div class="toggle">
 					<div class="toggle-panel toggle-left">
-						<h1>Hello, Friend!</h1>
+						<h1>Welcome to Bharat Bazaar !</h1>
 						<p>
-							Register with your personal details to use all of
-							site features.
+							Register with your personal details to access all
+							the features of our website.
 						</p>
-						<p>Already have an Account ?</p>
+						<p>Already have an account?</p>
 						<button class="hidden" id="login">Sign In</button>
 					</div>
+
 					<div class="toggle-panel toggle-right">
 						<h1>Welcome Back!</h1>
 						<p>
-							Enter your personal details to use all of site
-							features
+							Sign in to access your account and shop with ease.
 						</p>
-						<p>Do not have an Account ?</p>
-						<button class="hidden" id="register">Register</button>
+						<p>Don't have an account?</p>
+						<button class="hidden" id="register">
+							Create an Account
+						</button>
 					</div>
 				</div>
 			</div>
