--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 		<div class="container" id="container">
 			<div class="form-container register">
 				<form>
-					<h1>Create Account</h1>
+					<h1>Create My Account</h1>
 					<input type="text" placeholder="Name" />
 					<input type="email" placeholder="Email" />
 					<input type="number" placeholder="Phone Number" />
 					<input type="password" placeholder="Password" />
 					<input type="text" placeholder="Address" />
-					<button>Register</button>
+					<button>Create My Account</button>
 				</form>
 			</div>
 			<div class="form-container sign-in">
@@ -51,7 +51,7 @@
 						</p>
 						<p>Don't have an account?</p>
 						<button class="hidden" id="register">
-							Create an Account
+							Create New Account
 						</button>
 					</div>
 				</div>
